--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.4.32'
+    ext.kotlin_version = '1.5.0'
     ext {
         compose_version = '1.0.0-beta05'
+        room_version = '2.3.0'
     }
     repositories {
         google()
