--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+}
+
+ext {
+    koin_version = '3.0.2'
 }
 
 android {
@@ -37,13 +42,13 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion kotlin_version
     }
 }
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.10"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.10"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -51,9 +56,9 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
+    implementation 'androidx.activity:activity-compose:1.3.0-beta01'
 
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha02"
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha01'
     testImplementation 'junit:junit:4.13.2'
@@ -61,8 +66,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'org.kodein.di:kodein-di-framework-android-x:7.5.0'
+    // Koin for Android - Scope feature
+    // include koin-android-scope & koin-android
+//    implementation "org.koin:koin-android:$koin_version"
+//    implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
