added initialization from file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
