--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.21"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.21"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -61,15 +60,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.4.0-alpha06'
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-alpha03'
-    testImplementation 'junit:junit:4.13.2'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "io.insert-koin:koin-android:$koin_version"
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     implementation 'com.google.accompanist:accompanist-coil:0.15.0'
+    implementation "com.google.accompanist:accompanist-placeholder:0.17.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -78,4 +74,9 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation 'com.google.code.gson:gson:2.8.7'
+
+    testImplementation 'junit:junit:4.13.2'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
