--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
-}
-
-ext {
-    koin_version = '3.1.2'
+    id 'com.google.gms.google-services'
 }
 
 android {
