--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 buildscript {
-    ext.kotlin_version = '1.5.21'
     ext {
+        kotlin_version = '1.5.21'
         compose_version = '1.0.1'
         room_version = '2.3.0'
+        koin_version = '3.1.2'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
