--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,8 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
 
     implementation 'com.google.accompanist:accompanist-coil:0.15.0'
-    implementation "com.google.accompanist:accompanist-placeholder:0.17.0"
+    implementation "com.google.accompanist:accompanist-placeholder:0.18.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.18.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
